added logic for account and product in before and after read

--- a/package.json
+++ b/package.json
@@ -29,6 +29,26 @@
       "auth": "mocked"
       },
       "auth": "mocked"
-    }
+    },
+    "Account.Service": {
+      "kind": "rest",
+      "[production]": {
+        "credentials": {
+          "destination": "cns-custom-service-cap",
+          "path": ""
+        }
+      },
+      "[development]": {}
+    },
+      "Product.Service": {
+        "kind": "rest",
+        "[production]": {
+          "credentials": {
+            "destination": "cns-custom-service-cap",
+            "path": ""
+          }
+        },
+        "[development]": {}
+      }
   }
 }
